@@ -5,3 +5,4 @@ config.log
 config.status
 configure
 sample-config.tcl
+naviserver.rdf
